public interface IDamagable {
    void TakeDamage(Damage damage);
}