internal interface IHealth {
    void TakeDamage(float damage);
    void Heal(float heal);
}